# smi2ass

./: .gitignore  README.md  build.py  build.sh  install.sh  old_smi2ass.py  pyproject.toml  requirements.txt  smi2ass.py
setting/: _sample_ass_header.txt  ass_styles.json  css3_to_hex.json  lan_code.json
smi2ass/: __init__.py  ass_settings.py  main.py  settings.py  smi2ass.py
src/: __init__.py  __main__.py  ass_settings.py  main.py  smi2ass.py
src/smi2ass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/test/: test_smi2ass.py
test_smis/: Angel Beats! 01.smi  Angel Beats! 02.smi  Durarara!! - 01.smi  Durarara!! - 02.smi  경계의 저편 BD 01화.smi  경계의 저편 BD 02화.smi
