[project]
name = "smi2ass"
version = "1.2.5"
description = "A simple smi2ass converter"
requires-python = ">3.7"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

dependencies = ["beautifulsoup4", "chardet"]

readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev_win = ["nuitka"]
dev_linux = ["nuitka", "patchelf"]

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[tool.nuitka]
# These are not recommended, but they make it obvious to have effect.

# boolean option, e.g. if you cared for C compilation commands, leading
# dashes are omitted
show-scons = true

# options with single values, e.g. enable a plugin of Nuitka
plugin-enable = ["pyside2"] # Add plugins if needed

# options with several values, e.g. avoiding including modules, accepts
# list argument.
nofollow-import-to = ["*.tests", "*.distutils"]

standalone = true # Generate a standalone executable
onefile = false   # Generate a single-file executable

[tool.scripts]
smi2ass = "src.__main__:main"

[tool.package]
include = ["src"]
